--- a/templates/users/do_find_friends.html
+++ b/templates/users/do_find_friends.html
@@ -36,7 +36,7 @@
             <div class="friend-row">
                 {% for i in fb_profile_obj.user.profilephoto_set.all %}
                     {% if i.is_set %}
-                        <a href="/{{fb_profile_obj.user.username}}"><img width='120px' height='90px' src="{% cropped_thumbnail i cropping %}"></a>
+                        <a href="/{{fb_profile_obj.user.username}}"><img width='120px' height='90px' src="{% cropped_thumbnail i 'cropping' %}"></a>
                     {% endif %}
                 {% endfor %}
                 <p>{{fb_profile_obj.user.first_name}} {{fb_profile_obj.user.last_name}}</p>
