--- a/templates/users/edit_profile_photo.html
+++ b/templates/users/edit_profile_photo.html
@@ -32,7 +32,7 @@
 
               {% if profile_photo_obj %}
                 <h2>Preview</h2>
-                  <img src="{% cropped_thumbnail profile_photo_obj cropping %}" />
+                  <img src="{% cropped_thumbnail profile_photo_obj 'cropping' %}" />
                   <br><br>
                   <a class="green button" href="{% url 'edit_profile_photo' %}">Upload new</a>
               {% endif %}
