--- a/templates/users/show_likes_history.html
+++ b/templates/users/show_likes_history.html
@@ -65,7 +65,7 @@
            {% for i in single_liked_user.user.profilephoto_set.all %}
            {% if i.is_set %}
             <a href="/{{single_liked_user.user.username}}">
-                <div class="circular"><img style="margin-top: 5px;" src="{% cropped_thumbnail i cropping %}" /></div></a>
+                <div class="circular"><img style="margin-top: 5px;" src="{% cropped_thumbnail i 'cropping' %}" /></div></a>
                 {% endif %}
             {% endfor %}
 
