--- a/templates/users/write_story.html
+++ b/templates/users/write_story.html
@@ -6,7 +6,7 @@
 {% if messages %}
 <div class="messages">
     {% for message in messages %}
-    <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+    <p>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
     {% endfor %}
 </div>
 {% endif %}
