bc, kab karoge update django_facebook walo

--- a/templates/accounts/join_us.html
+++ b/templates/accounts/join_us.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="footer">
-           Copyright (c) at <a href="http://bquobe.com">Bquobe</a> infosystem (P) Ltd. | <a href='/help'>Help</a> | <a href=''>Privacy</a> 
+           Copyright (c) at <a href="http://amityadav.in">Amit Yadav</a> | <a href='/help'>Help</a> | <a href=''>Privacy</a>
         </div>
     </div>
 {% endblock %}
