--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -202,7 +202,7 @@
 			OR <a href="/facebook/connect/" class="button fb_blue">Facebook connect</a>
 		</div>
 		<div class="footer ubuntu">
-			Copyright (c) at <a href="http://bquobe.com">Bquobe</a> infosystem (P) Ltd. | <a href='/help'>Help</a> | <a href=''>Privacy</a> 
+               Copyright (c) at <a href="http://amityadav.in">Amit Yadav</a> | <a href='/help'>Help</a> | <a href=''>Privacy</a>
 		</div>
 		{% endif %}
 	</div>
