--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -4,31 +4,44 @@
 {% load bootstrap_toolkit %}
 {% load cropping %}
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:og="http://ogp.me/ns#"
-      xmlns:fb="https://www.facebook.com/2008/fbml">  
-	<head>
-		{% block head-extras%}
+>
+<head>
+    {% block head-extras%}
 
-		{% endblock%}
-		<meta charset="utf-8">
-		<title>OPOSOD</title>
-		<meta name="description" content="">
-		<meta name="author" content="Amit Yadav">
-		<link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/png"/>
+    {% endblock%}
+    <meta charset="utf-8">
+    <title>OPOSOD</title>
+    <meta name="description" content="">
+    <meta name="author" content="Amit Yadav">
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/png"/>
 
-		<!-- JAVASCRIPT  -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-		<script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-        <script src="{{STATIC_URL}}js/autobahn.min.js"></script>
-		<script src="http://www.jquery4u.com/demos/infinite-scrolling-demo1/js/jquery.masonry.min.js"></script>
-		<script src="/static/js/jquery.raty.js"></script>
-		<script src="{{STATIC_URL}}js/jquery.colorbox-min.js"></script>
-		<script src="{{STATIC_URL}}js/jquery.malsup.form.js"></script> 
+    <!-- JAVASCRIPT  -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
-		<!-- STYLES -->
-		<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css">
-		<style type="text/css">
+    <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{{STATIC_URL}}js/autobahn.min.js"></script>
+    <script src="http://www.jquery4u.com/demos/infinite-scrolling-demo1/js/jquery.masonry.min.js"></script>
+    <script src="/static/js/jquery.raty.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.colorbox-min.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.malsup.form.js"></script>
+
+    <script type="text/javascript">
+        jQuery.browser = {};
+        (function () {
+            jQuery.browser.msie = false;
+            jQuery.browser.version = 0;
+            if (navigator.userAgent.match(/MSIE ([0-9]+)\./)) {
+                jQuery.browser.msie = true;
+                jQuery.browser.version = RegExp.$1;
+            }
+        })();
+    </script>
+
+
+    <!-- STYLES -->
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css">
+    <style type="text/css">
 			body {
 
 				{% if cover_photo_obj %}
@@ -41,145 +54,155 @@
 					background: #fff;
 				{% endif %}
 			}
-		</style>
-		<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-		<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/style.css">
-		<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/images.css">
-		<link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
-		<link rel="stylesheet" href="{{STATIC_URL}}styles/colorbox.css" />
-		<!--[if lt IE 9]>
-		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		{% block extra_head %}{% endblock %}
-  	</head>
-	<body>
 
-		<div class="container-fluid">
+    </style>
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/style.css">
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/images.css">
+    <link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
+    <link rel="stylesheet" href="{{STATIC_URL}}styles/colorbox.css"/>
+    <!--[if lt IE 9]>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    {% block extra_head %}{% endblock %}
+</head>
+<body>
 
-		<div style="margin-bottom:100px;margin-top:10px;">
-                {% block content %}Empty page{% endblock %}
-            </div>
-		</div>
-		<!-- container -->
+<div class="container-fluid">
+
+    <div style="margin-bottom:100px;margin-top:10px;">
+        {% block content %}Empty page{% endblock %}
+    </div>
+</div>
+<!-- container -->
 
 
+<div id="my_nav" class="navbar navbar-fixed-bottom" style="height:60px;">
+    <div class="navbar-inner">
+        <div class="container-fluid bottom-image-size">
+            <ul class="nav ubuntu">
 
-		<div id="my_nav" class="navbar navbar-fixed-bottom" style="height:60px;">
-			<div class="navbar-inner">
-				<div class="container-fluid bottom-image-size">
-					<ul class="nav ubuntu">
-                       
-    						<li>
-                                <a href="{% url 'write_story' %}">
-                                    <!--<img src="/static/images/upload_2.png">-->
-                                    <div class="sprite-images-upload_small" ></div>
-                                </a>
-                            </li>
-                       
-                       
-                            <li>
-                                <form action="/search-oposod/" method="GET">
-                                    <input name="q" id="search" style="width:200px;" type="text" placeholder="Search Oposod..."/>  
-                                </form>
-                            </li>
-                       
-					</ul>
-					{% if user.is_authenticated %}
-					<ul class="nav pull-right ubuntu">
-                        <li>
-                            <div style="position:relative;margin-top:5px;margin-right:10px">
-                                <a href="/all/notification">
-                                    <!--<img src="{{STATIC_URL}}images/not2.jpg" style="width:25px;height:20px;margin-left:25px;margin-top:5px;margin-bottom:-5px;position:relative" />-->
-                                    <div class="sprite-images-not2" style="margin-left:25px;margin-top:10px;margin-bottom:-5px;position:relative" ></div>
-                                    <div id="notification_div" title="" style="margin-top:10px;position:relative"><span style="position:relative;color:#777">Notifications</span>
-                                    </div>
-                                </a>
+                <li>
+                    <a href="{% url 'write_story' %}">
+                        <!--<img src="/static/images/upload_2.png">-->
+                        <div class="sprite-images-upload_small"></div>
+                    </a>
+                </li>
+
+
+                <li>
+                    <form action="/search-oposod/" method="GET">
+                        <input name="q" id="search" style="width:200px;" type="text" placeholder="Search Oposod..."/>
+                    </form>
+                </li>
+
+            </ul>
+            {% if user.is_authenticated %}
+            <ul class="nav pull-right ubuntu">
+                <li>
+                    <div style="position:relative;margin-top:5px;margin-right:10px">
+                        <a href="/all/notification">
+                            <!--<img src="{{STATIC_URL}}images/not2.jpg" style="width:25px;height:20px;margin-left:25px;margin-top:5px;margin-bottom:-5px;position:relative" />-->
+                            <div class="sprite-images-not2" style="margin-left:25px;margin-top:10px;margin-bottom:-5px;position:relative"></div>
+                            <div id="notification_div" title="" style="margin-top:10px;position:relative"><span style="position:relative;color:#777">Notifications</span>
                             </div>
-                        </li>
+                        </a>
+                    </div>
+                </li>
 
 
-                        <!--<li><a href="{% url 'calendar' user.username %}"><img style="width:20px;height:20px;margin-left:15px;" src="{{STATIC_URL}}images/calendar.png"><br>Calendar</a></li>-->
-                        <li><a href="{% url 'calendar' user.username %}"><div class="sprite-images-calendar" style="margin-left:15px;margin-top:1px"></div><br><div style="margin-top:-15px;">Calendar</div></a></li>
-						
-						<!--
-						<li id="friends" {% if new_friend_request_count%}title='You have {{new_friend_request_count}} new connection request pending.'{%else%}title='You have no new connection request'{% endif %}>
-							<a href="{% url 'friends' user.username %}">
-								<img style="width:20px;height:20px;margin-left:15px;" src="{{STATIC_URL}}images/friends.png">
-								<br>
-								<span style="position: relative">Friends
-									{% if new_friend_request_count%}
-									<span style="text-align:center;
-									background:red;
-									color:#fff;
-									height: 20px;
-									padding: 0 3px 0 3px;
-									font-size:9px;
-									position: absolute;
-									top:-30px;
-									border-radius: 3px;
-									min-width: 10px;
-									margin-left:30px;" title="You have {{new_friend_request_count}} new connection request pending.">
-										{{new_friend_request_count}}
-									</span>
-									{% endif %}
-								</span>
+                <!--<li><a href="{% url 'calendar' user.username %}"><img style="width:20px;height:20px;margin-left:15px;" src="{{STATIC_URL}}images/calendar.png"><br>Calendar</a></li>-->
+                <li><a href="{% url 'calendar' user.username %}">
+                    <div class="sprite-images-calendar" style="margin-left:15px;margin-top:1px"></div>
+                    <br>
+                    <div style="margin-top:-15px;">Calendar</div>
+                </a></li>
 
-							</a>
-						</li>
+                <!--
+                <li id="friends" {% if new_friend_request_count%}title='You have {{new_friend_request_count}} new connection request pending.'{%else%}title='You have no new connection request'{% endif %}>
+                    <a href="{% url 'friends' user.username %}">
+                        <img style="width:20px;height:20px;margin-left:15px;" src="{{STATIC_URL}}images/friends.png">
+                        <br>
+                        <span style="position: relative">Friends
+                            {% if new_friend_request_count%}
+                            <span style="text-align:center;
+                            background:red;
+                            color:#fff;
+                            height: 20px;
+                            padding: 0 3px 0 3px;
+                            font-size:9px;
+                            position: absolute;
+                            top:-30px;
+                            border-radius: 3px;
+                            min-width: 10px;
+                            margin-left:30px;" title="You have {{new_friend_request_count}} new connection request pending.">
+                                {{new_friend_request_count}}
+                            </span>
+                            {% endif %}
+                        </span>
+
+                    </a>
+                </li>
 -->
-					
-
-						<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <!--<img style="width:20px;height:20px;margin-left:15px;" src="{{STATIC_URL}}images/settings1.png">-->
-                            <div class="sprite-images-settings1" style="margin-left:15px;"></div>
-                            <br><div style="margin-top:-15px">Settings<b class="caret"></b></div></a>
-		                  <ul class="dropdown-menu">
-		                  	<li class="nav-header">Edit</li>
-		                    <li><a href="{% url 'edit_profile' %}">Edit profile</a></li>
-		                    <li><a href="{% url 'edit_cover_photo' %}">Edit cover photo</a></li>
-		                    <li><a href="/edit/profile-photo/{% for i in user.profilephoto_set.all %}{% if i.is_set %}{{i.key}}{% endif %}{% endfor %}">Edit profile photo</a></li>
-		                    <li><a href="{% url 'change_password' %}">Change password</a></li>
-		                    <li class="divider"></li>
-		                    <li class="nav-header">Privacy</li>
-		                    <li><a href="{% url 'edit_privacy_settings' %}">Edit privacy</a></li>
-		                    <li class="nav-header">Facebook</li>
-		                    <li><a href="{% url 'facebook_settings' %}">Facebook settings</a></li>
-		                    <li class="divider"></li>
-		                    <li><a href="{% url 'signout' %}"><img style="width:80px;height:20px;" src="{{STATIC_URL}}images/logout1.png"></a></li>
-		                  </ul>
-		                </li>
 
 
-                        <!--<li><a href="/"><img style="width:20px;height:20px;margin-left:6.7px;" src="{{STATIC_URL}}images/home_icon3.png"><br>Home</a></li>-->
-                        <li><a href="/"><div style="margin-left:6.7px;" class="sprite-images-home_icon3"></div><br><div style="margin-top:-15px">Home</div></a></li>
-           			    <li><a href="/{{user.username}}">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <!--<img style="width:20px;height:20px;margin-left:15px;" src="{{STATIC_URL}}images/settings1.png">-->
+                        <div class="sprite-images-settings1" style="margin-left:15px;"></div>
+                        <br>
+                        <div style="margin-top:-15px">Settings<b class="caret"></b></div>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="nav-header">Edit</li>
+                        <li><a href="{% url 'edit_profile' %}">Edit profile</a></li>
+                        <li><a href="{% url 'edit_cover_photo' %}">Edit cover photo</a></li>
+                        <li><a href="/edit/profile-photo/{% for i in user.profilephoto_set.all %}{% if i.is_set %}{{i.key}}{% endif %}{% endfor %}">Edit profile photo</a></li>
+                        <li><a href="{% url 'change_password' %}">Change password</a></li>
+                        <li class="divider"></li>
+                        <li class="nav-header">Privacy</li>
+                        <li><a href="{% url 'edit_privacy_settings' %}">Edit privacy</a></li>
+                        <li class="nav-header">Facebook</li>
+                        <li><a href="{% url 'facebook_settings' %}">Facebook settings</a></li>
+                        <li class="divider"></li>
+                        <li><a href="{% url 'signout' %}"><img style="width:80px;height:20px;" src="{{STATIC_URL}}images/logout1.png"></a></li>
+                    </ul>
+                </li>
 
-	           			    	{% for profilephoto in user.profilephoto_set.all %}
-	           			    		{% if profilephoto.is_set %}
-	           			    		<img style="width:23px;height:22px;margin-left:6.7px;" src="{% cropped_thumbnail profilephoto 'cropping' %}">
-	           			    		{% endif %}
-	           			    	{% endfor %}
 
-           			    	<br>{{user.first_name|title}} {{user.last_name|title}}</a></li>
-					</ul>
-					{% else %}
-						<ul class="nav pull-right ubuntu">
-						<li style="margin-top:8px;"><a href="{% url 'join_us' %}"><span class="button green" >Join us</span> to explore more.</a></li>
+                <!--<li><a href="/"><img style="width:20px;height:20px;margin-left:6.7px;" src="{{STATIC_URL}}images/home_icon3.png"><br>Home</a></li>-->
+                <li><a href="/">
+                    <div style="margin-left:6.7px;" class="sprite-images-home_icon3"></div>
+                    <br>
+                    <div style="margin-top:-15px">Home</div>
+                </a></li>
+                <li><a href="/{{user.username}}">
 
-					</ul>
-					{% endif %}
-				</div>
-			</div>
-		</div>
+                    {% for profilephoto in user.profilephoto_set.all %}
+                    {% if profilephoto.is_set %}
+                    <img style="width:23px;height:22px;margin-left:6.7px;" src="{% cropped_thumbnail profilephoto 'cropping' %}">
+                    {% endif %}
+                    {% endfor %}
 
-	<!--
-		SCRIPTS HERE
-	-->
+                    <br>{{user.first_name|title}} {{user.last_name|title}}</a></li>
+            </ul>
+            {% else %}
+            <ul class="nav pull-right ubuntu">
+                <li style="margin-top:8px;"><a href="{% url 'join_us' %}"><span class="button green">Join us</span> to explore more.</a></li>
+
+            </ul>
+            {% endif %}
+        </div>
+    </div>
+</div>
+
+<!--
+    SCRIPTS HERE
+-->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -189,6 +212,7 @@
 
   ga('create', 'UA-37884945-2', 'oposod.com');
   ga('send', 'pageview');
+
 
 </script>
 
@@ -251,8 +275,9 @@ function test() {
     sess.subscribe("notifications:{{friend}}", onEvent);
 {% endfor %}
 }
+
 </script>
 
-	</body>
+</body>
 
 </html>
