--- a/templates/htmltest/index.html
+++ b/templates/htmltest/index.html
@@ -1,20 +1,6 @@
-{% extends "htmltest/base.html" %}
-
-{% block content %}
-    <div class="profile-logo-desc">
-        
-        <img src="/static/images/n.jpg">
-        
-        <div class="profile-desc">
-            <h2>Soumya Nehwal</h2>
-            <p>This is a description...This is a description...This is a description...</p>
-        </div>
-    </div>  
-
-    <div class="status">
-        <p>
-            In the event that the image is larger than the amount of text that would otherwise surround it, causing the image to hang like a flag over some element below it, then at some point in the text, 
-        </p>
-    </div>  
-
-{% endblock %}
+{% extends "base.html" %}
+<div>
+    {% block content %}
+    <div>haha</div>
+    {% endblock content %}
+</div>
