--- a/templates/cal_template.html
+++ b/templates/cal_template.html
@@ -4,74 +4,63 @@
 
 {% block extra_css %}
 <style type="text/css">
+    .calendar img:hover {
+        opacity: 0.9;
+    }
 
-        select {
-            width: 150px;
-        }
-       
-        .calendar img:hover {
-         opacity: 0.9; 
-        }
+    table {
+        border: #ddd;
+        margin: 0 auto;
+    }
 
-        .calendar {
-            width: 700px;
-            margin: 0 auto;
+    td {
+        width: 100px;
+        height: 100px;
+        text-align: center;
+        font-size: 30px;
+    }
 
-        }
-        table {
-            border: #ddd;
-        }
+    th {
+        background: #ddd;
+        font-size: 16px;
+        text-align: center;
+    }
 
-        td {
-            width: 100px;
-            height: 100px;
-            text-align: center;
-            font-size: 30px;
-        }
+    ul li {
+        list-style: none;
+    }
 
-        th {
-            background: #ddd;
-            font-size:16px;
-            text-align:center;
-        }
-        ul li {
-            list-style: none;
-        }
-        .calendar img {
-            width: 100px;
-            height: 100px;
+    .calendar img {
+        width: 100px;
+        height: 100px;
 
-        }
+    }
 </style>
 {% endblock extra_css %}
 
 {% block content%}
-<div style="width: 700px;margin:0 auto;">
-    <div style="">
-        <form class="form-inline" action="" method="post">
-            {% csrf_token %}
-            <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="month" data-style="btn" data-width="20%">
-                {% for month in month_name_list %}
-                <option>{{month}}</option>
-                {% endfor %}
-            </select>
+<form class="form-inline" action="" method="post">
+    {% csrf_token %}
+    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="month" data-style="btn" data-width="20%">
+        {% for month in month_name_list %}
+        <option>{{month}}</option>
+        {% endfor %}
+    </select>
 
-            <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="year" data-style="btn" data-size="5" data-width="15%">
-                {% for year in year_list %}
-                <option>{{year}}</option>
-                {% endfor %}
-            </select>
-            <button type="submit" style="" class="btn btn-info">Show </button>
-            <div class="ml-auto">
-                <a class="btn btn-primary" href="/{{username}}/photo-calendar/{{previous_year}}/{{previous_month}}">{{previous_month_name}}</a>
-                <a class="btn btn-success" href="/{{username}}/photo-calendar/{{next_year}}/{{next_month}}">{{next_month_name}}</a>
-            </div>
-        </form>
+    <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="year" data-style="btn" data-size="5" data-width="15%">
+        {% for year in year_list %}
+        <option>{{year}}</option>
+        {% endfor %}
+    </select>
+    <button type="submit" style="" class="btn btn-info">Show</button>
+    <div class="ml-auto">
+        <a class="btn btn-primary" href="/{{username}}/photo-calendar/{{previous_year}}/{{previous_month}}">{{previous_month_name}}</a>
+        <a class="btn btn-success" href="/{{username}}/photo-calendar/{{next_year}}/{{next_month}}">{{next_month_name}}</a>
     </div>
-</div>
+</form>
 
 <hr>
-<div class="calendar" width="960px">
+<div class="">
     {% photo_calendar year month photo_list %}
 </div>
 
@@ -79,16 +68,16 @@
 
 {% block extra_js %}
 <script>
-    $(document).ready(function(){
-        $(".group3").colorbox({rel:'group3', fixed:true, scrolling:true,preloading:true, transition:"none", width:"85%", height:"100%"});
+    $(document).ready(function () {
+        $(".group3").colorbox({rel: 'group3', fixed: true, scrolling: true, preloading: true, transition: "none", width: "85%", height: "100%"});
     });
 </script>
 
 <script>
-      $(document).ready(function() {
-        $(".dayid").hover(function() {
-          //$(".dayid").css("opacity" ='1');
+    $(document).ready(function () {
+        $(".dayid").hover(function () {
+            //$(".dayid").css("opacity" ='1');
         });
-      });
+    });
 </script>
 {% endblock %}
